--- a/app/assets/stylesheets/refinery/announcement.scss
+++ b/app/assets/stylesheets/refinery/announcement.scss
@@ -5,10 +5,6 @@
     .v2-banner {
       padding-bottom: 2rem;
     }
-
-    p {
-      margin: 0;
-    }
   }
 
   .container {
@@ -17,12 +13,14 @@
       margin: 0;
       padding: 0;
     }
+
     .content__content-type {
       @include media (small) {
         grid-row: 2;
         margin-top: 1rem;
         padding: 1rem 1.35rem 0;
       }
+
       appearance: none;
       color: $v3-color_gray-dark;
       font-family: $font_family-secondary;
@@ -38,6 +36,7 @@
         grid-row: 4;
         padding: 1rem 1.35rem 0;
       }
+
       appearance: none;
       color: $v3-color_gray-dark;
       font-family: $font_family-secondary-light;
@@ -50,6 +49,7 @@
         grid-row: 3;
         padding: .5rem 1.35rem 0;
       }
+
       color: $v3-color_green-medium;
       font-family: $font_family-primary;
       font-size: $font_size-xlarge;
@@ -61,6 +61,7 @@
         grid-row: 5;
         padding: .5rem 1.35rem 0;
       }
+
       color: $color_bg-darkgrey;
       font-family: $font_family-primary;
       font-size: $font_size-small;
@@ -75,6 +76,7 @@
         min-height: unset;
         padding: .5rem 1.35rem 1rem;
       }
+
       color: $v3-color_gray-dark;
       font-size: $font_size-small;
       line-height: 1.5rem;
@@ -83,18 +85,11 @@
     }
 
     .content__image {
-      @include media(small) {
-        float: unset;
-        grid-row: 1;
-        margin: 0;
-        max-height: 20rem;
-        max-width: unset;
-        padding: 0;
-        width: 100%;
-      }
+      @include mobile-image;
+
       float: right;
       height: auto;
-      margin: 10.25rem 0 .6rem .8rem;
+      margin: 11.25rem 0 .6rem .8rem;
       max-width: 30rem;
       padding: 0 1.35rem 1rem 1rem;
     }
